--- a/Extension/PhotoGallery.safariextension/Info.plist
+++ b/Extension/PhotoGallery.safariextension/Info.plist
@@ -5,7 +5,7 @@
 	<key>Author</key>
 	<string>Matt Goatcher</string>
 	<key>Builder Version</key>
-	<string>7534.51.22</string>
+	<string>7534.57.2</string>
 	<key>CFBundleDisplayName</key>
 	<string>QuickLook Photo Gallery</string>
 	<key>CFBundleIdentifier</key>
@@ -13,9 +13,9 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0</string>
+	<string>1.1</string>
 	<key>CFBundleVersion</key>
-	<string>1</string>
+	<string>2</string>
 	<key>Chrome</key>
 	<dict>
 		<key>Global Page</key>
@@ -55,6 +55,8 @@
 	<dict>
 		<key>Website Access</key>
 		<dict>
+			<key>Include Secure Pages</key>
+			<true/>
 			<key>Level</key>
 			<string>All</string>
 		</dict>
